feat: full implementation of all Facade<->Controller<->UI fluxes